# fastdog

./: .env.example  .gitignore  README.md  __init__.py  check_model.py  db.sqlite3  deploy.sh  main.py  package.json  post-receive  post-receive.sh  pyproject.toml  requirements.txt  test.db  test.db-shm  test.db-wal  uv.toml
.github/workflows/: ci.yml
api/v1/: api.py  auth.py  deps.py
apps/admin/: models.py  routes.py
apps/albums/: 11111.py  __init__.py  admin.py  base.py  crud.py  models.py  routes.py  schemas.py
apps/albums/admin/: __init__.py  album.py  photo.py  utils.py
apps/albums/migrations/: update_original_url.py
apps/converters/: __init__.py  admin.py  api.py  coords.py  crud.py  models.py  routes.py  schemas.py  services.py
apps/files/: __init__.py  admin.py  crud.py  models.py  routes.py  schemas.py
apps/geos/: __init__.py  admin.py  crud.py  models.py  routes.py  schemas.py
apps/ideas/: admin.py  genImage.py  job.py  models.py  routes.py
apps/resources/: admin.py  crud.py  models.py  routes.py  schemas.py
apps/tasks/: admin.py  job.py  models.py  scheduler.py
apps/users/: admin.py  crud.py  models.py  routes.py  schemas.py
core/: admin.py  app_models.py  config.py  constants.py  database.py  database_config.py  decorators.py  exceptions.py  logging.py  protected_static.py  schemas.py  security.py  settings.py  static.py
core/middleware/: __init__.py  cors.py  error_handler.py  exceptions.py  rate_limit.py
deploy/: fastdog.conf  gunicorn_conf.py  install-brotli.sh  nginx-brotli.conf  nginx.conf  supervisor.conf
docs/: file_protection.md
migrations/: README.md
migrations/models/: 0_20250228100004_init.py  0_20250302010205_init.py
static/demo/: debug-decoder.html  test-stream-glb.html  wasm-model- display.html  wasm-model-viewer.html  wasm-test.html  zero-copy-test.html
static/js/: fallback-decoder.js  model-loader.js  wasm-decoder.js
static/uploads/models/: performance_test.fastdog
static/wasm/: fastdog_decoder.d.ts  fastdog_decoder.js  fastdog_decoder_bg.wasm
tests/: 11.py  222.pz  test_compression_integrity.py  test_decode_simple.py  test_file_protection.py  test_genImage.py  test_glb_compression.py  test_large_files.py  test_optimization_performance.py  test_users.py  test_wasm_api.py
utils/: __init__.py  coordinate.py  email.py
wasm/: Cargo.toml  README.md  build.bat  build.sh
wasm/src/: lib.rs
