[package]
name = "fastdog-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
] }
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = 3  # 优先性能而非大小
lto = "fat"    # 更激进的链接时优化
codegen-units = 1
panic = "abort"
overflow-checks = false  # 禁用溢出检查以提升性能

[profile.release.package."*"]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd", "--enable-bulk-memory", "--enable-mutable-globals"]